docs: add Parameter Validation pattern documentation
Add pattern for verifying script instances are parameterized with expected values.
Useful for minting policies that need to ensure tokens go to correctly configured scripts.

--- a/scalus-site/content/learning/index.mdx
+++ b/scalus-site/content/learning/index.mdx
@@ -36,6 +36,12 @@ Reduce execution costs by delegating computation to single-execution endpoints:
 - **[Transaction Level Minter](/docs/learning/design-patterns/transaction-level-minter-pattern)** - Couple spend and mint endpoints for minimal spend costs
 - **[Merkelized Validator](/docs/learning/design-patterns/merkelized-validator-pattern)** - Read verified data from stake validator redeemers for batch operations
 
+### Validation Patterns
+
+Verify script instances and parameters across multi-script protocols:
+
+- **[Parameter Validation](/docs/learning/design-patterns/parameter-validation-pattern)** - Verify script instances are parameterized with expected values
+
 ### Indexing Patterns
 
 Efficiently map inputs to outputs using off-chain computed indices:
