--- a/scalus-site/content/ledger/yaci-devkit.mdx
+++ b/scalus-site/content/ledger/yaci-devkit.mdx
@@ -8,7 +8,7 @@ import { Callout } from 'nextra/components'
 
 # Cardano Integration Testing with Yaci DevKit
 
-[Yaci DevKit](https://github.com/bloxbean/yaci-devkit) is a Docker-based local Cardano devnet for integration testing. It provides full ledger validation and Plutus script execution without external dependencies — no testnet ADA, no network latency, no third-party API limits.
+[Yaci DevKit](https://github.com/bloxbean/yaci-devkit) is a configurable local Cardano devnet running in Docker. It provides full ledger validation and Plutus script execution without external dependencies — no testnet ADA, no network latency, no third-party API limits.
 
 ## Prerequisites
 
